package tk.designpattern.stratge;

public abstract class FlyStrategy {
    public abstract void fly();
}
