package tk.designpattern.stratge;

public class GoodFly extends FlyStrategy {
    @Override
    public void fly() {
        System.out.println("我飞的很高");
    }
}
