package tk.designpattern.stratge;

public class GoodSwim extends SwimStrategy {
    @Override
    public void swim() {
        System.out.println("我游泳很好");
    }
}
