package tk.designpattern.stratge;

public abstract class SwimStrategy {
    public abstract void swim();
}
